--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Game Title</title>
+    <title>The Bobo Escape</title>
     </head>
     <body>
-        <!-- This scrip loads the latest v3000 of Kaboom -->
         <script src="https://unpkg.com/kaboom@3000/dist/kaboom.js"></script>
-
         <script src="game.js"></script>
     </body>
     </html>
